# pec-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.it.md  README.md  app_structure_llm.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AUTHENTICATION.md  FAQ.md  PROVIDERS.md
pec_cli/: __init__.py  daticert.py  main.py  mcp_server.py  retry.py
pec_cli/auth/: __init__.py  credentials.py
pec_cli/imap/: __init__.py  client.py
pec_cli/models/: __init__.py  message.py
pec_cli/output/: __init__.py  formatter.py
pec_cli/smtp/: __init__.py  sender.py
skills/: install.sh  pec-cli.md
tests/: test_imap_client.py  test_imap_retry.py  test_main_commands.py  test_mcp_server.py  test_retry.py  test_send_safeguards.py  test_smoke.py  test_smtp_retry.py
