[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pec-cli"
version = "0.1.0"
description = "CLI for PEC (Posta Elettronica Certificata) — built for AI agents and developers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MayAI", email = "info@mayai.it" }]
keywords = ["pec", "cli", "email", "imap", "smtp", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
dependencies = [
    "click>=8.1.0",
    "cryptography>=42.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
pec = "pec_cli.main:cli"

[project.urls]
Homepage = "https://mayai.it"
Repository = "https://github.com/mayai-it/pec-cli"

[tool.hatch.build.targets.wheel]
packages = ["pec_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
