[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayai-pec-cli"
version = "0.1.0"
description = "Command-line client for Italian PEC (Posta Elettronica Certificata) — built for AI agents and developers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MayAI", email = "info@mayai.it" }]
maintainers = [{ name = "MayAI", email = "info@mayai.it" }]
keywords = [
    "pec",
    "posta-elettronica-certificata",
    "italy",
    "italian",
    "cli",
    "command-line",
    "email",
    "imap",
    "smtp",
    "ai-agents",
    "llm",
    "aruba",
    "legalmail",
    "infocert",
    "namirial",
    "poste-italiane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Italian",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Communications :: Email :: Post-Office :: POP3",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "cryptography>=42.0.0",
    "defusedxml>=0.7.1",
    "keyring>=24.0.0",
    "mcp>=1.2.0",
    # mcp pulls starlette transitively (>=0.27). starlette<1.0.1 has
    # PYSEC-2026-161 — pin direct so resolver picks a non-vulnerable version.
    "starlette>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
pec = "pec_cli.main:cli"
pec-mcp = "pec_cli.mcp_server:main"

[project.urls]
Homepage = "https://mayai.it"
Documentation = "https://github.com/mayai-it/pec-cli#readme"
Repository = "https://github.com/mayai-it/pec-cli"
Issues = "https://github.com/mayai-it/pec-cli/issues"
Changelog = "https://github.com/mayai-it/pec-cli/releases"

[tool.hatch.build.targets.wheel]
packages = ["pec_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "pec_cli",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
