[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayai-pec-cli"
version = "0.1.0"
description = "Command-line client for Italian PEC (Posta Elettronica Certificata) — built for AI agents and developers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MayAI", email = "info@mayai.it" }]
maintainers = [{ name = "MayAI", email = "info@mayai.it" }]
keywords = [
    "pec",
    "posta-elettronica-certificata",
    "italy",
    "italian",
    "cli",
    "command-line",
    "email",
    "imap",
    "smtp",
    "ai-agents",
    "llm",
    "aruba",
    "legalmail",
    "infocert",
    "namirial",
    "poste-italiane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Italian",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Communications :: Email :: Post-Office :: POP3",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "cryptography>=42.0.0",
    "defusedxml>=0.7.1",
    "keyring>=24.0.0",
    "mcp>=1.2.0",
    # mcp pulls starlette transitively (>=0.27). starlette<1.0.1 has
    # PYSEC-2026-161 — pin direct so resolver picks a non-vulnerable version.
    "starlette>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
pec = "pec_cli.main:cli"
pec-mcp = "pec_cli.mcp_server:main"

[project.urls]
Homepage = "https://mayai.it"
Documentation = "https://github.com/mayai-it/pec-cli#readme"
Repository = "https://github.com/mayai-it/pec-cli"
Issues = "https://github.com/mayai-it/pec-cli/issues"
Changelog = "https://github.com/mayai-it/pec-cli/releases"

[tool.hatch.build.targets.wheel]
packages = ["pec_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "pec_cli",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

# Strict baseline
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

# Pragmatic exceptions:
# - click decorators (@click.command, @click.group, @click.option) are not
#   fully typed upstream, so requiring typed decorators here is noise.
# - disallow_any_generics will be re-enabled once we migrate dataclasses to
#   Pydantic models with concrete generics (see UPGRADE_PLAN.md).
disallow_untyped_decorators = false
disallow_any_generics = false

# Extra checks beyond strict baseline.
disallow_subclassing_any = true
strict_equality = true
extra_checks = true

# Third-party libraries without bundled stubs.
[[tool.mypy.overrides]]
module = ["mcp.*", "defusedxml.*", "keyring.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pec_cli"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
